Add tabbed professional storage panels